--- a/EnalyzerATM/EnalyzerATM/wwwroot/css/site.css
+++ b/EnalyzerATM/EnalyzerATM/wwwroot/css/site.css
@@ -1,18 +1,30 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    background-color: #2bbed3;
+    color: white;
+    font-family: Helvetica;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+        background-color: #2bbed3;
+        color: white;
+        font-family: Helvetica;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    background-color: #2bbed3;
+    color: white;
+    font-family: Helvetica;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #2bbed3;
+    color: white;
+    font-family: Helvetica;
 }
